--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    padding:0;
+    margin:0;
+    box-sizing:border-box
+}
+
+button{
+    padding: 12px 20px;
+    background: purple;
+    color: white;
+   
+}
+
+body{
+    background: #f4f4f4;
+}
+
