--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,13 +1,24 @@
 
 <div class="posts">
-  <h3> {{post.title}} </h3>
-  <article>
-    <div> post image</div>
-    <div>
-      <p>post.content</p>
-      <span class="category"> Post category </span> <span class="author"> Post Author </span>
+  <h3 > {{post.title}} </h3>
+  <div class="row">
+    <div class="col-md-4">
+        
+            <div class="post-image text-center"> <img [src]="post.urlToImage" alt="story image"> </div>
+    
     </div>
-
-  </article>
+    <div class="col-md-6 col-md-offset-2 ">
+        <div>
+            <p> {{post.content}} </p>
+            <span class="badge badge-danger "> Date Published: {{post.publishedAt | date:'medium'}} </span> 
+            <span class="badge badge-primary "> Post Author : {{post.author}} </span>
+            <span class="badge badge-primary"> <i class="fa fa-share-alt"> Share on Twitter</i> </span>
+            <span class="badge badge-info">  <i class="fa fa-eye"> Views</i></span>
+            
+          </div>
+    </div>
+  </div>
 </div>
+
+
 
