--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,21 @@
-<header>
-  <span class="brand">
-    <a routerLink = ''>Newsify</a> 
-  </span>
-  <div class="menus">
-      <a routerLink='/sport'>Sport</a>
-      <a routerLink="/education"> Education</a>
-      <a routerLink="/health">Health</a>
-      <a routerLink="/contact"> Contact</a>
-  </div>
-</header>
+
+<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <a routerLink = ''>Newsify</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" routerLink='/sport'> <i class="fa fa-running"></i> Sport</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/education"> <i class="fas fa-hospital" aria-hidden="true"></i> Education</a>
+        </li>
+          
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/health"> <i class="fas fa-hospital" aria-hidden="true"></i> Health</a>
+        </li>  
+      </ul>
+    </div>  
+  </nav>
