--- a/src/app/posts/posts.component.css
+++ b/src/app/posts/posts.component.css
@@ -2,6 +2,17 @@
     margin: 15px auto;
     background: #ffffff;
     width: 80%;
+    box-shadow: 2px 4px 2px rgba(0, 0, 2, .2), 4px 2px 2px rgba(0, 0, 2, .2)
+}
+
+.post-image{
+   width: 80%;
+   margin-left: 12px;
+}
+
+.post-image img{
+    width: 100%;
+    height:auto;
 }
 
 h3{
@@ -11,18 +22,9 @@ h3{
 
 
 
-.category  {
-    background: red;
+span {
+    
     /* padding: 6px 6px; */
-    width: 25px;
-    height: 15px;
-    margin-right: 5px;
-}
-
-.author {
-    background: purple;
-    /* padding: 6px 6px; */
-    width: 25px;
-    height: 15px;
+    
     margin-right: 5px;
 }
