--- a/src/app/sport/sport.component.html
+++ b/src/app/sport/sport.component.html
@@ -2,8 +2,8 @@
 <div class="container-fluid">
 
         <div class=" row" >
-                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12" *ngFor ="let post of posts.articles" >
-                        <div class="card1">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12" data-aos="fade-down" data-aos-once="true" *ngFor ="let post of posts.articles" >
+                        <div class="card1" >
                                         <div class="card-header"  >
                                                         <p>{{post.title}}</p>
                                                       </div>
